kube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.dev.yml
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.dev.yml
        kompose.version: 1.30.0 (HEAD)
      labels:
        io.kompose.network/laudspeaker-default: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: pratikbambonebyzero/laudspeaker-server:one-by-zero
          name: backend
          ports:
            - containerPort: 3001
              hostPort: 3001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
