kube/clickhouse-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.dev.yml
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.network/laudspeaker-default: "true"
    io.kompose.service: clickhouse
  name: clickhouse
spec:
  containers:
    - image: clickhouse/clickhouse-server:latest
      name: clickhouse
      ports:
        - containerPort: 8123
          hostPort: 8123
          protocol: TCP
        - containerPort: 9000
          hostPort: 9000
          protocol: TCP
      resources: {}
  restartPolicy: OnFailure
status: {}
