kube/e2e-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.dev.yml
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: e2e
  name: e2e
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: e2e
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.dev.yml
        kompose.version: 1.30.0 (HEAD)
      labels:
        io.kompose.network/laudspeaker-default: "true"
        io.kompose.service: e2e
    spec:
      containers:
        - args:
            - npx
            - cypress
            - run
          image:  524048473941.dkr.ecr.ap-southeast-1.amazonaws.com/cypress-laudspeaker:latest
          name: cypress
          resources: {}
      restartPolicy: Always
status: {}
