kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.dev.yml
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.dev.yml
        kompose.version: 1.30.0 (HEAD)
      labels:
        io.kompose.network/laudspeaker-default: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: kulnigam/laudspeaker-web:one-by-zero-v4
          name: frontend
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
status: {}
