kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.dev.yml
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  type: LoadBalancer
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
