kube/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.dev.yml
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: clickhouse
  name: clickhouse
spec:
  ports:
    - name: "8123"
      port: 8123
      targetPort: 8123
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: clickhouse
status:
  loadBalancer: {}
