kube/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:353793401470:certificate/c070a223-0042-4f55-9e60-cbfdb8f9685e
    alb.ingress.kubernetes.io/group.name: tivala
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name: tivala-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: campaign.digico.onebyzero.ai
    kubernetes.io/ingress.class: alb
  labels:
    app: frontend
  name: frontend
spec:
  ingressClassName: alb
  rules:
  - host: campaign.digico.onebyzero.ai
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
